<resources>
    <string name="app_name">BeeKeepers Notebook</string>
    <string name="ErrorMsgAdd">Error al agregar el dato</string>
    <string name="ErrorMsgUpdate">Error al actualizar el dato</string>
    <string name="ErrorMsgRemove">Error al eliminar el dato</string>
    <string name="ErrorMsgGetAll">Error al obtener la lista de datos.</string>
    <string name="ErrorMsgGetById">Error al obtener el dato especifico</string>
    <string name="MsgDataNotFound">El dato no fue encontrado</string>
    <string name="TextEmail">Correo electrónico</string>
    <string name="TextPassword">Contraseña</string>
    <string name="btnTextLogin">Iniciar sesión</string>
    <string name="TextForgot">¿Olvidaste la contraseña?</string>
    <string name="TextCreateAccount">Crear cuenta</string>
    <string name="TextYes">Sí</string>
    <string name="TextNo">No</string>
    <string name="TextTitleDialogQuestion">Pregunta</string>
    <string name="TextConfirmDeleteQueen">¿Desea eliminar a esta reina?</string>
    <string name="TextAdd">Agregar</string>
    <string name="TextUpdate">Actualizar</string>
    <string name="TextDelete">Eliminar</string>
    <string name="TextSearch">Buscar</string>
    <string name="TextQueenId">ID de la reina</string>
    <string name="TextQueenType">Tipo de reina</string>
    <string name="TextFillFields">Rellene todos los campos obligatorios</string>
    <string name="TextAddedSuccessfully">Reina añadida correctamente.</string>
    <string name="TextUpdatedSuccessfully">Reina actualizada correctamente</string>
    <string name="TextDeletedSuccessfully">Información eliminada correctamente.</string>
    <string name="TextQueenEntryDate">Fecha de ingreso</string>
    <string name="TextSingUp">Inscribirse</string>
    <string name="TextRegisterHere">¿No tienes una cuenta? Regístrate aquí.</string>
    <string name="TextExistingAccount">Inicia sesión en con tu cuenta existente</string>
    <string name="TextInventory">Inventario</string>
    <string name="TextID">ID</string>
    <string name="TextName">Nombre</string>
    <string name="TextFLastName">Primer apellido</string>
    <string name="TextSLastname">Segundo apellido</string>
    <string name="TextPhone">Teléfono</string>
    <string name="TextLogin">Inicio sesión</string>
    <string name="TextUsername">Usuario</string>
    <string name="TextSubmit">Enviar</string>
    <string name="TextCancel">Cancelar</string>
    <string name="TextConfirmPassword">Confirma contraseña</string>
    <string name="TextDeleteActionQuestion">¿Desea eliminar la información?</string>
    <string name="TextSaveActionQuestion">¿Desea guardar la información?</string>
    <string name="MsgMissingData">Faltan datos por completar</string>
    <string name="MsgDuplicateData">El dato está duplicado, ya existe</string>
    <string name="MsgSaveSuccess">Guardado correctamente</string>
    <string name="MsgDeleteSucess">Eliminado correctamente</string>
    <string name="TextSave">Guardar</string>
    <string name="TextEdit">Editar</string>
    <string name="TextEnterEmaiPassw">Complete correo electrónico y contraseña</string>
    <string name="Textprofile">Perfil usuario</string>

</resources>