<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUpActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#FF9800"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/tvAppTitleSignUp"
                android:text="BeeKeeper's Notebook"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/TextSingUp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Please sign up to get started" />

                <LinearLayout
                    android:orientation="vertical"
                    android:background="#DDDDDD"
                    android:padding="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TextID" />

                    <EditText
                        android:id="@+id/txtId_person"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text" />

                    <ImageButton
                        android:id="@+id/btnSearchId_person"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        app:srcCompat="@android:drawable/ic_search_category_default" />

                    <ImageButton
                        android:id="@+id/btnSelectPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_camera" />

                    <ImageView
                        android:id="@+id/imgPhoto"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        tools:srcCompat="@tools:sample/avatars"
                        android:src="@mipmap/ic_launcher"
                        android:scaleType="centerCrop"
                        android:padding="4dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TextUsername" />

                    <EditText
                        android:id="@+id/etUsername"
                        android:hint="Usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:backgroundTint="@android:color/black" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TextFLastName" />

                    <EditText
                        android:id="@+id/etFirstLastName"
                        android:hint="Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:backgroundTint="@android:color/black" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/TextSLastname" />

                    <EditText
                        android:id="@+id/etSecondLastName"
                        android:hint="Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:backgroundTint="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/TextPassword" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:hint="Value"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:backgroundTint="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/TextConfirmPassword" />

                    <EditText
                        android:id="@+id/etConfirmPassword"
                        android:hint="Value"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:backgroundTint="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/TextEmail" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:hint="example@email.com"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:backgroundTint="@android:color/black" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/TextPhone" />

                    <EditText
                        android:id="@+id/etPhone"
                        android:hint="Value"
                        android:inputType="phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:backgroundTint="@android:color/black" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="end"
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/btnSubmit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="#FF9800"
                            android:text="@string/TextSubmit"
                            android:textColor="@android:color/white" />

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/btnCancel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/TextCancel" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>